# hooli-data-eng-pipelines

./: .gitignore  .ruffignore  Dockerfile  Makefile  README.md  bookworm.Dockerfile  bookworm_slim.Dockerfile  dagster.yaml  dagster_cloud.yaml  dagster_cloud_pre_install.sh  dg.toml  locations.yaml  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  workspace.yaml
hooli-ai/: Dockerfile  README.md  pyproject.toml
hooli-ai/hooli_ai/: definitions.py
hooli-ai/hooli_ai/assets/: ingestion.py  retrieval.py
hooli-ai/hooli_ai/resources/: github.py  pinecone.py  scraper.py
hooli-airlift/: Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
hooli-airlift/hooli_airlift/: assets.py  definitions.py
hooli-basics/: pyproject.toml
hooli-basics/hooli_basics/: definitions.py
hooli-basics/src/hooli_basics/: definitions.py
hooli-batch-enrichment/: Dockerfile  README.md  pyproject.toml
hooli-batch-enrichment/hooli_batch_enrichment/: __init__.py  assets.py  definitions.py
hooli-batch-enrichment/src/hooli_batch_enrichment/: definitions.py  warehouse.py
hooli-bi/: Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
hooli-bi/hooli_bi/: __init__.py  definitions.py  powerbi_assets.py  powerbi_workspace.py
hooli-bi/hooli_bi/defs/powerbi_workspace/: defs.yaml
hooli-bi/src/hooli_bi/: powerbi_assets.py  powerbi_workspace.py
hooli-data-eng/: Dockerfile  pyproject.toml
hooli-data-eng/dbt_project/: dbt_project.yml  packages.yml  profiles.yml
hooli-data-eng/dbt_project/models/ANALYTICS/: company_stats.sql  orders_augmented.sql  weekly_order_summary.sql
hooli-data-eng/dbt_project/models/CLEANED/: locations_cleaned.sql  users_cleaned.sql
hooli-data-eng/dbt_project/tests/: assert_total_order_non_zero.sql
hooli-data-eng/hooli_data_eng/: definitions.py  project.py  resources.py
hooli-data-eng/hooli_data_eng/batch_enrichment/: assets.py  definitions.py
hooli-data-eng/hooli_data_eng/bi/: definitions.py
hooli-data-eng/hooli_data_eng/components/: __init__.py  enhanced_data_quality_checks.py
hooli-data-eng/hooli_data_eng/defs/: __init__.py
hooli-data-eng/hooli_data_eng/defs/batch_enrichment/: README.md  assets.py  jobs.py  raw_data.csv  resources.py
hooli-data-eng/hooli_data_eng/defs/bi/: powerbi_assets.py  resources.py
hooli-data-eng/hooli_data_eng/defs/custom_ingest/: assets.py  definitions.py
hooli-data-eng/hooli_data_eng/defs/data_ingest/: assets.py  jobs.py  resources.py  schedules.py
hooli-data-eng/hooli_data_eng/defs/databricks/: assets.py  definitions.py
hooli-data-eng/hooli_data_eng/defs/dbt/: __init__.py  assets.py  component.py  component.yaml  definitions.py  resources.py  schedules.py  slim_ci.py  slim_ci_job.py  translator.py
hooli-data-eng/hooli_data_eng/defs/enhanced_data_quality_checks/: defs.yaml
hooli-data-eng/hooli_data_eng/defs/files/: definitions.py  sensors.py  test_sensor_util.py
hooli-data-eng/hooli_data_eng/defs/kubernetes/: definitions.py
hooli-data-eng/hooli_data_eng/defs/notebooks/: definitions.py
hooli-data-eng/hooli_data_eng/defs/pandas/: assets.py  definitions.py  resources.py  schedules.py
hooli-data-eng/hooli_data_eng/defs/power_bi/: custom_column_transform.py  defs.yaml
hooli-data-eng/hooli_data_eng/defs/scheduled_job/: component.yaml
hooli-data-eng/hooli_data_eng/defs/scikit_learn/: definitions.py
hooli-data-eng/hooli_data_eng/defs/snowflake_insights/: definitions.py
hooli-data-eng/hooli_data_eng/lib/: foo.py  scheduled_job_component.py
hooli-data-eng/hooli_data_eng/resources/: api.py
hooli-data-eng/hooli_data_eng/utils/: __init__.py  kind_helpers.py
hooli-data-eng/hooli_data_eng_tests/: test_databricks_pipes.py
hooli-data-eng/src/hooli_data_eng/: definitions.py  resources.py
hooli-data-eng/src/hooli_data_eng/components/: scheduled_job_component.py
hooli-data-eng/src/hooli_data_eng/utils/: __init__.py  kind_helpers.py
hooli-data-ingest/: Dockerfile  locations.csv  pyproject.toml  setup.py
hooli-data-ingest/hooli_data_ingest/: __init__.py  definitions.py
hooli-data-ingest/hooli_data_ingest/assets/: sling.py
hooli-data-ingest/hooli_data_ingest/jobs/: __init__.py
hooli-data-ingest/hooli_data_ingest/resources/: __init__.py
hooli-data-ingest/hooli_data_ingest/schedules/: __init__.py
hooli-data-ingest/src/hooli_data_ingest/: __init__.py  definitions.py
hooli-data-ingest/src/hooli_data_ingest/assets/: sling.py
hooli-data-ingest/src/hooli_data_ingest/resources/: __init__.py
hooli-etl-pipeline/: .dockerignore  README.md  pyproject.toml
hooli-etl-pipeline/src/hooli_etl_pipeline/defs/: assets.py  resources.py
hooli-etl-pipeline/transform/jdbt/: profiles.yml
hooli-interoperability/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
hooli-interoperability/hooli_interoperability/: definitions.py
hooli-ml/: Dockerfile  README.md  pyproject.toml
hooli-ml/databricks_mlops/: README.md  cicd_params.json
hooli-ml/databricks_mlops/databricks_mlops/: README.md  databricks.yml  project_params.json  requirements.txt
hooli-ml/databricks_mlops/docs/: ml-pull-request.md  mlops-setup.md
hooli-ml/example_config/: SCAFFOLDER_README.md  common_config_example.yaml  condition_task_example.yaml  generated_component_config.yaml  job_parameters_example.yaml  job_parameters_references_example.yaml  job_task_examples.yaml  libraries_example.yaml  metadata_example.yaml  sample_databricks_bundle.yml  scaffolder_job_parameters_example.yml  table_locations_example.yaml
hooli-ml/example_config/resources/: jobs.yml  jobs_with_parameters.yml
hooli-ml/src/hooli_ml/components/: COMPLETE_GUIDE.md  (+4 more)
hooli-ml/stashed_files/multi_notebook_job_component_gen/: defs.py
hooli-snowflake-insights/: Dockerfile  pyproject.toml
hooli-snowflake-insights/hooli_snowflake_insights/: definitions.py
hooli-snowflake-insights/src/hooli_snowflake_insights/: definitions.py
hooli_basics/: Dockerfile  definitions.py  pyproject.toml  requirements.in  requirements.txt
hooli_snowflake_insights/: Dockerfile  definitions.py  pyproject.toml  requirements.in  requirements.txt  setup.py
(+375 files in other folders)
