[project]
name = "hooli_airlift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-airlift[core,mwaa]",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "hooli_airlift.definitions"
code_location_name = "hooli_airlift"

[tool.setuptools.packages.find]
exclude=["hooli_airlift_tests"]
