[project]
name = "hooli_airlift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.10.2",
    "dagster-cloud",
    "dagster-airlift[core,mwaa]==0.26.2",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hooli_airlift"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hooli_airlift"
code_location_target_module = "hooli_airlift.definitions"