[project]
name = "hooli_basics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-duckdb",
    "pandas",
    "beautifulsoup4",
    "html5lib",
    "scikit-learn",
    "dagster-cloud[insights]",
]


[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hooli_basics"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hooli_basics"
code_location_target_module = "hooli_basics.definitions"

[tool.dg.project.python_environment]
uv_managed = true