[project]
name = "dagster_batch_enrichment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster-duckdb",
    "pandas",
    "responses",
    "dagster-cloud[insights]",
    "dagster>=1.11.0",
    "dagster-webserver>=1.11.0",
    "dagster-dg-cli>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hooli_batch_enrichment"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hooli_batch_enrichment"
code_location_target_module = "hooli_batch_enrichment.definitions"