[project]
name = "hooli_bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-powerbi",
    "dagster-pipes",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "hooli_bi.definitions"
code_location_name = "hooli_bi"

[tool.setuptools]
packages = { find = { exclude = ["dagster_batch_enrichment_tests"] } }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hooli_bi"
code_location_target_module = "hooli_bi.definitions"

[tool.dg.project.python_environment]
uv_managed = true

[tool.uv.sources]
dagster = { path = "../../dagster/python_modules/dagster", editable = true }
dagster-aws = { path = "../../dagster/python_modules/libraries/dagster-aws", editable = true }
dagster-cloud = { path = "../../internal/dagster-cloud/python_modules/dagster-cloud", editable = true }
dagster-cloud-cli = { path = "../../dagster/python_modules/libraries/dagster-cloud-cli", editable = true }
dagster-databricks = { path = "../../dagster/python_modules/libraries/dagster-databricks", editable = true }
dagster-dbt = { path = "../../dagster/python_modules/libraries/dagster-dbt", editable = true }
dagster-dlt = { path = "../../dagster/python_modules/libraries/dagster-dlt", editable = true }
dagster-duckdb = { path = "../../dagster/python_modules/libraries/dagster-duckdb", editable = true }
dagster-duckdb-pandas = { path = "../../dagster/python_modules/libraries/dagster-duckdb-pandas", editable = true }
dagster-embedded-elt = { path = "../../dagster/python_modules/libraries/dagster-embedded-elt", editable = true }
dagster-fivetran = { path = "../../dagster/python_modules/libraries/dagster-fivetran", editable = true }
dagster-gcp = { path = "../../dagster/python_modules/libraries/dagster-gcp", editable = true }
dagster-graphql = { path = "../../dagster/python_modules/dagster-graphql", editable = true }
dagster-k8s = { path = "../../dagster/python_modules/libraries/dagster-k8s", editable = true }
dagster-pandas = { path = "../../dagster/python_modules/libraries/dagster-pandas", editable = true }
dagster-pipes = { path = "../../dagster/python_modules/dagster-pipes", editable = true }
dagster-powerbi = { path = "../../dagster/python_modules/libraries/dagster-powerbi", editable = true }
dagster-pyspark = { path = "../../dagster/python_modules/libraries/dagster-pyspark", editable = true }
dagster-shared = { path = "../../dagster/python_modules/libraries/dagster-shared", editable = true }
dagster-slack = { path = "../../dagster/python_modules/libraries/dagster-slack", editable = true }
dagster-sling = { path = "../../dagster/python_modules/libraries/dagster-sling", editable = true }
dagster-snowflake = { path = "../../dagster/python_modules/libraries/dagster-snowflake", editable = true }
dagster-snowflake-pandas = { path = "../../dagster/python_modules/libraries/dagster-snowflake-pandas", editable = true }
dagster-webserver = { path = "../../dagster/python_modules/dagster-webserver", editable = true }
dagstermill = { path = "../../dagster/python_modules/libraries/dagstermill", editable = true }
