[project]
name = "hooli_bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-powerbi",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hooli_bi"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hooli_bi"
code_location_target_module = "hooli_bi.definitions"