[project]
name = "hooli_data_ingest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-duckdb",
    "dagster-sling",
    "dagster-cloud[insights]",
    "dagster-dg-cli>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver>=1.11.0", 
    "pytest",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hooli_data_ingest"
code_location_target_module = "hooli_data_ingest.definitions"

[tool.dg.project.python_environment]
uv_managed = true
active = false


[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points]
"dagster_dg.plugin" = { hooli_data_ingest = "hooli_data_ingest.lib"}


[tool.setuptools]
packages = { find = { exclude = ["hooli_data_ingest_tests"] } }
