[project]
name = "hooli_data_ingest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-duckdb",
    "dagster-sling",
    "dagster-cloud[insights]",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver>=1.11.0",
    "dagster-dg-cli>=1.11.0",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hooli_data_ingest"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hooli_data_ingest"
code_location_target_module = "hooli_data_ingest.definitions"

[dependency-groups]
dev = [
    "dagster-webserver",
]

[project.entry-points]
"dagster_dg.plugin" = { hooli_data_ingest = "hooli_data_ingest.lib"}