[project]
name = "hooli_interoperability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.10.2",
    "dagster-cloud",
    "dagster-airlift[core,mwaa]==0.26.2",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "hooli_interoperability.definitions"
code_location_name = "hooli_interoperability"

[tool.hatch.build.targets.wheel]
packages = ["hooli_interoperability"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hooli_interoperability"
code_location_target_module = "hooli_interoperability.definitions"

[tool.dg.project.python_environment]
uv_managed = true
