[project]
name = "hooli_snowflake_insights"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud[insights]",
    "dagster-dbt",
    "dagster-snowflake>=0.25.0",
    "gql",
    "requests-toolbelt",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hooli_snowflake_insights"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hooli_snowflake_insights"
code_location_target_module = "hooli_snowflake_insights.definitions"