[project]
name = "hooli_basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster-duckdb",
    "pandas",
    "beautifulsoup4",
    "html5lib",
    "scikit-learn",
    "dagster-cloud[insights]",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "hooli_basics.definitions"
code_location_name = "hooli_basics"

[tool.setuptools]
packages = { find = { exclude = ["hooli_basics_tests"] } }
