[project]
name = "hooli_snowflake_insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud[insights]",
    "dagster-dbt",
    "dagster-snowflake>=0.25.0",
    "gql",
    "requests-toolbelt",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "hooli_snowflake_insights.definitions"
code_location_name = "hooli_snowflake_insights"

[tool.setuptools]
packages = { find = { exclude = ["hooli_snowflake_insights_tests"] } }
